...
                                .offset(y = 250.dp)
                                .fillMaxWidth(.15f)
                                .testTag("LOADING_PROGRESS"),
                            color = Color(0xFF3891E1)
                        )
...
                    modifier = Modifier
                        .size(35.dp)
                        .testTag("OWNER_PICTURE"),
                )
            }
...
                            fontWeight = FontWeight.SemiBold,
                            color = Color.LightGray,
                            modifier = Modifier.testTag("MOVIE_COUNT")
                        )
                    } else {
...
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("SHEET_CONTENT")
            )
        }
...
                        style = MaterialTheme.typography.headlineMedium,
                        textAlign = TextAlign.Center,
                        modifier = Modifier.testTag("ADD_COLLAB_LOG_NAME")
                    )
                }
...
                            .padding(start = 24.dp)
                            .fillMaxWidth()
                            .testTag("COLLABS_LIST_ADD_SHEET")
                    ) {
                        items(collaboratorsList.size) { index ->
...
                        modifier = Modifier
                            .size(35.dp)
                            .testTag("ADD_ICON")
                            .clickable(onClick = {
                                isCollabSheetOpen = true
...
                        modifier = Modifier
                            .size(35.dp)
                            .testTag("EDIT_ICON")
                            .clickable(onClick = {
                                sheetContent = {
...
                            .size(35.dp)
                            .fillMaxHeight()
                            .testTag("SHUFFLE_ICON")
                            .clickable {
                                setAlertDialogState(
...
                        modifier = Modifier
                            .size(50.dp)
                            .testTag("ADD_MOVIE_ICON")
                            .clickable(onClick = {
                                isAddSheetOpen = true
...
            modifier = Modifier
                .height(unwatchedColHeight)
                .testTag("MOVIES_LIST")
        ) {
            Log.d(TAG, "Movies: ${movies.values}\nWatched movies: ${watchedMovies.values}")
...
            navController.navigate("home_movie_details_${movie.id}_${logId}_${movieIsWatched}_${isRando}")
        }
        .testTag("MOVIE_ENTRY"),
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.Center) {
...
            modifier = Modifier
                .fillMaxWidth()
                .testTag("EDIT_SHEET_CONTENT"),
            horizontalArrangement = Arrangement.Center,
            verticalAlignment = Alignment.CenterVertically
...
                onValueChange = { editedLogName = it },
                singleLine = true,
                modifier = Modifier.testTag("LOG_NAME_INPUT"),
                keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
                keyboardActions = KeyboardActions(
...
                        .height(55.dp)
                        .padding(horizontal = 24.dp)
                        .testTag("EDIT_SAVE_BUTTON"),
                    colors = ButtonDefaults.buttonColors(
                        containerColor = colorResource(id = R.color.sky_blue),
...
                                shape = RoundedCornerShape(30.dp)
                            )
                            .testTag("EDIT_DELETE_BUTTON"),
                        colors = ButtonDefaults.buttonColors(
                            containerColor = Color.Transparent,
...
                modifier = Modifier
                    .size(35.dp)
                    .testTag("REMOVE_MOVIE_ICON")
                    .clickable {
                        if (!moviesToDelete.contains(movie.id)) {
...
                style = MaterialTheme.typography.bodyLarge,
                textAlign = TextAlign.Center,
                modifier = Modifier.testTag("EDIT_LOG_MOVIE_TITLE"),
                maxLines = 2,
                overflow = TextOverflow.Ellipsis
...
                modifier = Modifier
                    .size(35.dp)
                    .testTag("DRAG_ICON"),
                colorFilter = ColorFilter.tint(color = colorResource(id = R.color.white))
            )
...
