...
        Card(
            shape = RoundedCornerShape(10.dp),
            modifier = Modifier
                .fillMaxWidth()
                .padding(0.dp)
                .height(IntrinsicSize.Min)
                .testTag("ALERT_DIALOG"),
            elevation = 0.dp
        ) {
            Column(
                Modifier
                    .fillMaxWidth()
                    .background(Color(0xFF232323))
...
                            Modifier
                                .fillMaxWidth()
                                .padding(0.dp)
                                .weight(1F)
                                .border(0.dp, color = Color.Transparent)
                                .height(48.dp)
                                .testTag("ALERT_DIALOG_ACCEPT_BUTTON"),
                            elevation = ButtonDefaults.elevation(0.dp, 0.dp),
                            shape = RoundedCornerShape(0.dp),
                            contentPadding = PaddingValues()
                        ) {
                            Text(text = acceptText ?: "", color = acceptTextColor ?: Color(0xFF3891E1), fontSize = 15.sp, fontWeight = FontWeight.Bold)
                        }
...
